tests/ui/const-generics/issues/issue-73260.stderr
error[E0308]: mismatched types
  --> $DIR/issue-73260.rs:15:12
   |
LL |     let x: Arr<{usize::MAX}> = Arr {};
   |            ^^^^^^^^^^^^^^^^^ expected `false`, found `true`
   |
   = note: expected constant `false`
              found constant `true`
note: required by a bound in `Arr`
  --> $DIR/issue-73260.rs:5:37
   |
LL | struct Arr<const N: usize>
   |        --- required by a bound in this
LL | where
LL |     Assert::<{N < usize::MAX / 2}>: IsTrue,
   |                                     ^^^^^^ required by this bound in `Arr`

error[E0308]: mismatched types
  --> $DIR/issue-73260.rs:15:32
   |
LL |     let x: Arr<{usize::MAX}> = Arr {};
   |                                ^^^ expected `false`, found `true`
   |
   = note: expected constant `false`
              found constant `true`
note: required by a bound in `Arr`
  --> $DIR/issue-73260.rs:5:37
   |
LL | struct Arr<const N: usize>
   |        --- required by a bound in this
LL | where
LL |     Assert::<{N < usize::MAX / 2}>: IsTrue,
   |                                     ^^^^^^ required by this bound in `Arr`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
